[metadata]
# replace with your username:
name = elmock
version = 1.0.1
author = Titouan FREVILLE
author_email = titouan.freville@gmail.com
description = A simple package to allow dynamic mocking class definition.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elmagician/elmock
project_urls =
    Bug Tracker = https://github.com/elmagician/elmock/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
